fixato overflow e creato pulsante scroll top

--- a/src/assets/style/generals.scss
+++ b/src/assets/style/generals.scss
@@ -25,90 +25,4 @@ ul {
     }
 }
 
-.clearfix{
-    &:after {
-        content: "";
-        display: table;
-        clear: both;
-    }
-}
 
-//classe per bottoni personalizzata e riutilizzabile
-.my-btn{
-    height: 45px;
-    padding: 15px 35px;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 14px;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border: 0;
-    border-radius: 30px;
-    &.mini{
-        height: 35px;
-        padding: 10px 20px;
-    }
-    &.yellow{
-        background-color: $primary-yellow;
-    }
-    &.blue{
-        background-color: $primary-blue;
-    }
-    &.white{
-        background-color: white;
-        border: 2px solid $primary-gray;
-        color: $primary-gray;
-    }
-}
-
-.my-subcontainer{
-    padding: 100px 60px;
-}
-
-//classe per testo in testa alla sezione
-.my-head-text{
-    width: 100%;
-    text-align: center;
-    margin-bottom: 60px;
-    padding: 0 25%;
-    h2{
-        font-size: 38px;
-        font-weight: 700;
-        margin-top: 10px;
-        margin-bottom: 20px;
-    }
-    p{
-        font-size: 21px;
-        color: $primary-gray;
-        margin-bottom: 20px;
-    }
-    &.white{
-        color: white;
-        p{
-            color: white;
-        }
-    }
-}
-
-.my-card{
-    text-align: center;
-    padding: 35px;
-    
-    i{
-        color: $primary-yellow;
-        font-size: 36px;
-        padding-bottom: 15px;
-    }
-    h3{
-        font-size: 28px;
-        font-weight: 700;
-        padding-bottom: 15px;
-    }
-    p{
-        font-size: 18px;
-        padding-bottom: 20px;
-    }
-
-}
